2014-05-12  Vanessa Gil  <vanessa.gil@artica.es>

	* include/functions_config.php: Added alert in header
	when safe_mode is on.

2014-05-11  Junichi Satoh  <junichi@rworks.jp>

	* extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql: Changed the order
	of 'ALTER TABLE' and 'INSERT INTO' for trecon_script to avoid error.
	Added a missing column for trecon_script.

2014-05-11  Junichi Satoh  <junichi@rworks.jp>

	* install.php: Improved to adjust program paths in pandora db for
	FreeBSD. All packages and configuration files except operating
	system's base files are installed under /usr/local in FreeBSD.
	So, path settings in pandora db for some programs should be changed
	from the Linux default.
	And, fixed database creation failure with PostgreSQL.

2014-05-11  Junichi Satoh  <junichi@rworks.jp>

	* pandoradb.postgreSQL.sql: Fixed that initial user (admin) cannot
	be logged in.

2014-05-11  Junichi Satoh  <junichi@rworks.jp>

	* pandoradb.postgreSQL.sql, pandoradb.data.postgreSQL.sql: Fixed
	sql errors.

2014-05-10  Junichi Satoh  <junichi@rworks.jp>

	* pandoradb.sql, pandoradb_data.sql: Fixed sql errors with MySQL5.6.

2014-05-10  Junichi Satoh  <junichi@rworks.jp>

	* extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql: Fixed a typo.

2014-05-09  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* general/shortcut_bar.php: Updated the shortcut bar.

	* include/styles/pandora.css: Added new styles for the
	shortcut bar elements.

2014-05-08  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extensions/matrix_events/ajax.php,
	  extensions/matrix_events.php: Added
	files. New extension to see the latest events like if
	you were the operator of the Nebuchadnezzar.

2014-05-08  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/servers/plugin.php: Removed 'max. retries'.

2014-05-08  Koichiro KIKUCHI <koichiro@rworks.jp>

	* godmode/agentes/agent_wizard.snmp_interfaces_explorer.php:
	 (Re)added ifXTable support to the SNMP interface wizard.
